docs/analytics/v0.11/_sources/reference/tmlt/analytics/metrics/_user_defined/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


********************
_user_defined
********************

.. py:module:: tmlt.analytics.metrics._user_defined

.. autoapi-nested-parse::

   Metric functions for wrapping user-defined functions.











Classes
=======

.. list-table::

   * - :class:`.CustomSingleOutputMetric`
     - Wrapper to allow users to define a metric that operates on a single output table.
   * - :class:`.CustomMultiBaselineMetric`
     - Wrapper to turn a function into a metric using DP and single baseline's output.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: CustomSingleOutputMetric(func, output, *, name, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.SingleBaselineMetric`

   Wrapper to allow users to define a metric that operates on a single output table.

   Turns a function that calculates error on two dataframes (one DP, one baseline)
   into a Metric.

   .. note::

       |PRO_NOTE|


   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import CustomSingleOutputMetric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_outputs = {"O": baseline_df}

   >>> def size_difference(dp_outputs: DataFrame, baseline_outputs: DataFrame):
   ...     return baseline_outputs.count() - dp_outputs.count()

   >>> metric = CustomSingleOutputMetric(
   ...     func=size_difference,
   ...     name="Output size difference",
   ...     description="Difference in number of rows.",
   ...     output="O",
   ... )
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   0
   >>> metric.format(result)
   '0'






   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Returns the name of the run output or view name.


   .. py:method:: func()
      :property:

      Returns function to be applied.


   .. py:method:: format(value)

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program, output_views)

      Checks if the metric is compatible with the program.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Returns the metric value given the DP outputs and the baseline outputs.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: CustomMultiBaselineMetric(output, func, *, name, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.MultiBaselineMetric`

   Wrapper to turn a function into a metric using DP and single baseline's output.

   .. note::

       |PRO_NOTE|


   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import AbsoluteError
       >>> from tmlt.analytics.metrics import CustomMultiBaselineMetric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df1 = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_df2 = spark.createDataFrame(pd.DataFrame({"A": [6]}))
   >>> baseline_outputs = {
   ...    "O": {"baseline1": baseline_df1, "baseline2": baseline_df2}
   ... }
   >>> _func = lambda dp_outputs, baseline_outputs: {
   ...    output_key: {
   ...         baseline_key: AbsoluteError(output_key).compute_on_scalar(
   ...                 dp_output.first().A, baseline_output.first().A
   ...         )
   ...         for baseline_key, baseline_output
   ...         in baseline_outputs[output_key].items()
   ...     }
   ...     for output_key, dp_output in dp_outputs.items()
   ...  }

   >>> metric = CustomMultiBaselineMetric(
   ...     output="O",
   ...     func=_func,
   ...     name="Custom Metric",
   ...     description="Custom Description",
   ... )
   >>> result = metric.compute_for_multiple_baselines(dp_outputs, baseline_outputs)
   >>> result
   {'O': {'baseline1': 0, 'baseline2': 1}}






   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Returns the name of the run output or view name.


   .. py:method:: func()
      :property:

      Returns function to be applied.


   .. py:method:: format(value)

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program, output_views)

      Checks if the metric is compatible with the program.


   .. py:method:: compute_for_multiple_baselines(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Returns the metric value given the DP and multiple baseline outputs.


   .. py:method:: compute(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines that
      the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs, after filtering to
                               only include the baselines that the metric is supposed to use.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.







